configuracion de log debugger con wintons

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -54,7 +54,8 @@
       "@typesSrc/*":["./app/types/*"],
       "@database/*":["./app/database/*"],
       "@interfaces/*":["./app/interfaces/*"],
-      "@helpers/*": ["./app/helpers/*"]
+      "@helpers/*": ["./app/helpers/*"],
+      "@logs/*":["./app/logs/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
