--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "rate-limiter-flexible": "^2.2.1",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "winston": "^3.3.3"
   }
 }
