--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@types/mongoose-unique-validator": "^1.0.4",
     "audit": "^0.0.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -48,6 +49,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.11.15",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "rate-limiter-flexible": "^2.2.1",
